made edits to add my profile

--- a/css/styles.css
+++ b/css/styles.css
@@ -4909,11 +4909,11 @@ a:visited {
 }
 
 #tina-hang-cover {
-  background-image: url("http://imgur.com/dD7Y7A9");
+  background-image: url("http://imgur.com/dD7Y7A9.jpg");
 }
 
 #tina-hang-card {
-  background-image: url("http://imgur.com/sT8d0u1");
+  background-image: url("http://imgur.com/sT8d0u1.jpg");
 }
 
 
